fix (keyboard-shortcuts-dialog.component.scss): fix text not visible in dark mode

--- a/src/app/shared/keyboard-shortcuts-dialog/keyboard-shortcuts-dialog.component.scss
+++ b/src/app/shared/keyboard-shortcuts-dialog/keyboard-shortcuts-dialog.component.scss
@@ -2,6 +2,7 @@
     border: 1px solid #0000004d;
     padding: 0.3rem;
     background: #f8f8f8;
+    color: #00000086;
     font-weight: bold;
     border-radius: 0.3rem;
 }
